--- a/app/src/main/res/layout/content_sales.xml
+++ b/app/src/main/res/layout/content_sales.xml
@@ -43,15 +43,15 @@
 
         <TextView
             android:id="@+id/textView12"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.3"
+            android:gravity="end"
+            android:paddingRight="10dp"
             android:text="@string/txt_header_list_suma_sales"
             android:textAlignment="textEnd"
             android:textColor="@color/colorAccent"
-            android:textSize="18sp"
-            android:gravity="end"
-            android:paddingRight="10dp" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <ImageButton
