--- a/app/src/main/res/layout/content_stock_assortment.xml
+++ b/app/src/main/res/layout/content_stock_assortment.xml
@@ -189,6 +189,7 @@
         android:id="@+id/LL_list_stock_assortment"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:choiceMode="singleChoice"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_change_stock_stock_assortment"
         app:layout_constraintEnd_toEndOf="parent"
