--- a/app/src/main/res/layout/show_asl_sales.xml
+++ b/app/src/main/res/layout/show_asl_sales.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.2"
-        android:gravity="center_horizontal"
+        android:gravity="center_horizontal|center_vertical"
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@color/colorPrimaryDark"
@@ -40,7 +40,7 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
-        android:gravity="end"
+        android:gravity="center_vertical|end"
         android:paddingRight="10dp"
         android:textAlignment="textEnd"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
