--- a/app/src/main/res/layout/content_check_price.xml
+++ b/app/src/main/res/layout/content_check_price.xml
@@ -24,7 +24,7 @@
     <Button
         android:id="@+id/btn_select_warehouse_check_price"
         android:layout_width="0dp"
-        android:layout_height="44dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginEnd="4dp"
@@ -34,7 +34,7 @@
         android:text="@string/txt_depozit_nedeterminat"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
