--- a/app/src/main/res/layout/content_invoice.xml
+++ b/app/src/main/res/layout/content_invoice.xml
@@ -204,7 +204,7 @@
     <Button
         android:id="@+id/btn_change_stock_invoice"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
