--- a/app/src/main/res/layout/content_stock_assortment.xml
+++ b/app/src/main/res/layout/content_stock_assortment.xml
@@ -132,7 +132,7 @@
     <Button
         android:id="@+id/btn_change_stock_stock_assortment"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -142,7 +142,7 @@
         android:text="@string/txt_depozit_nedeterminat"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/btn_ok_stock_assortment"
         app:layout_constraintEnd_toEndOf="parent"
