--- a/app/src/main/res/layout/activity_count_stock_assortment.xml
+++ b/app/src/main/res/layout/activity_count_stock_assortment.xml
@@ -226,8 +226,8 @@
         android:background="@drawable/round_corners_red_edit_text"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:inputType="numberDecimal"
-        android:maxLength="5"
+        android:inputType="number"
+        android:maxLength="4"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_add_count_stock_assortment"
         app:layout_constraintStart_toStartOf="parent"
