--- a/app/src/main/res/layout/activity_count_transfer.xml
+++ b/app/src/main/res/layout/activity_count_transfer.xml
@@ -84,8 +84,8 @@
         android:ems="10"
         android:gravity="center"
         android:imeOptions="actionDone"
-        android:inputType="number"
-        android:maxLength="4"
+        android:inputType="numberDecimal"
+        android:maxLength="6"
         android:singleLine="true"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_add_count_transfer"
